--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -184,7 +184,13 @@ input {
 
 button {
     width: 10rem;
-    margin: 0rem 0rem 0.675rem 0rem;;
+    margin: 0rem 0rem 0.675rem 0rem;
+}
+
+select {
+    text-align: center;
+    width: 10rem;
+    margin: 0rem 0rem 0.675rem 0rem;
 }
 
 @media all AND (max-width:1400px)
@@ -196,6 +202,11 @@ button {
         button {
             width: 10rem;
         }
+
+        select {
+            width: 10rem;
+        }
+
         .title-search {
             top: 20%;
         }
@@ -210,6 +221,11 @@ button {
         button {
             width: 8rem;
         }
+
+        select {
+            width: 8rem;
+        }
+
         .title-search {
             top: 16%;
         }
@@ -225,6 +241,11 @@ button {
         button {
             width: 6rem;
         }
+
+        select {
+            width: 6rem;
+        }
+
         form {
             font-size: 1.2rem;
         }
@@ -263,6 +284,12 @@ button {
             width: 6rem;
             margin: 0rem 0.5rem 0rem 0.5rem;
         }
+
+        select {
+            width: 6rem;
+            margin: 0rem 0.5rem 0rem 0.5rem;
+        }
+
         form {
             flex-direction: column;
             align-items:center;
