--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -144,6 +144,7 @@ input[type="text"]:focus {
 
 .search_btn button:hover {
     border: solid #000000 1px;
+    font-size: 0.95rem;
 }
 
 /*section actualités*/
@@ -473,7 +474,7 @@ button {
 .footer {
     background-color: #000000;
     width: auto;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     padding-top: 20px;
     padding-left: 20px;
     display: flex;
@@ -572,7 +573,7 @@ button {
     font-size: 0.8rem;
     background-color: #000000;
     color: #ffffff;
-    padding-bottom: 30px;
+    padding-bottom: 1.25rem;
     font-family: 'Open sans', sans-serif;
 }
 
@@ -642,19 +643,19 @@ button {
     }
 
     .size_form select {
-        width: 10rem !important;
+        width: 13rem !important;
         margin: 0 auto;
         margin-top: 0.5rem;
     }
 
     .size_form input {
-        width: 9.625rem !important;
+        width: 12.625rem !important;
         margin: 0 auto;
         margin-top: 0.5rem;
     }
 
     .search_btn button {
-        width: 10rem !important;
+        width: 13rem !important;
         padding-right: 0;
         margin: 0 auto;
         margin-top: 0.5rem;
