--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -474,9 +474,10 @@ button {
 .footer {
     background-color: #000000;
     width: auto;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    padding-left: 20px;
+    padding-bottom: 1.25rem;
+    padding-top: 1.25rem;
+    padding-left: 1.25rem;
+    padding-right: 2.5rem;
     display: flex;
     justify-content: space-around;
 }
@@ -1285,11 +1286,6 @@ button {
      /*section article agence*/
      .button_contact, .button_estimate {
         width: 10rem;
-    }
-
-
-    .footer {
-        padding-right: 20px;
     }
 
 }
