--- a/asset/css/authentification.css
+++ b/asset/css/authentification.css
@@ -51,7 +51,7 @@ main{
 
 .form_container{
     height: 40%;
-    width: 45%;
+    width: 35%;
     border: 3px solid black;
     border-radius: 30px;
     padding: 10px;
@@ -59,10 +59,11 @@ main{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 95px;
+    gap: 50px;
     position: absolute;
     left: 0px;
     top: 150px;
+    margin-left: 5px;
 
 }
 
@@ -88,7 +89,11 @@ main{
 
 }
 
-
+.test {
+    padding-left: 50%;
+    width: 65%;
+    height: 104%;
+}
  
 
 
